# aiocloudscraper

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: main.yml
aiocloudscraper/: __init__.py  types.py
aiocloudscraper/client/: cipher.py  handler.py  http.py  resp_parser.py  solver.py  transport.py
aiocloudscraper/interpreters/: __init__.py  _js2py.py  base.py  chakracore.py  native.py  nodejs.py  utilty.py
aiocloudscraper/interpreters/fuck/: _ast.py  handler.py  mapper.py
aiocloudscraper/solvers/: 2captcha.py  __init__.py  anti_captcha.py  base.py
docs/: index.md  modules.md
tests/: test_detect.py  test_foo.py  test_withings.py
