[tool.poetry]
name = "aiocloudscraper"
version = "0.0.1"
description = "Async Python module to bypass Cloudflare's anti-bot page."
authors = ["Mani Mozaffar <fmani.mozaffar@gmail.com>"]
repository = "https://github.com/manimozaffar/aiocloudscraper"
documentation = "https://manimozaffar.github.io/aiocloudscraper/"
readme = "README.md"
packages = [
  {include = "aiocloudscraper"}
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fake-useragent = "^1.3.0"
httpx = "^0.25.0"
js2py = "^0.74"
pyparsing = "^3.1.1"
user-agents = "^2.2.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
